--- a/websystems/past.html
+++ b/websystems/past.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="websystems.css">
+    </head>
     <body>
-        <p>
-            My past is an interesting one. I was born in Australia in 2001. yeah.
-        </p>
+        <h1>Primary School Life</h1>
+        <h2>My Time in CSPS</h2>
+        <p>From K-6 I attended Carlton South Primary School in, you guessed it, Carlton, Sydney. My Primary school life was nothing special,
+            with me completing my time there with no issues. I enjoyed myself back then by playing cricket during the summer season and rugby 
+            during the winter season. I also partook in the debating club which ended up winning undefeated that year under our command.</p>
+            <br>
+        <h2>Notable Achievements</h2>
+       <ul>
+        <li>Undefeated in the Year 6 Debating Season</li>
+        <li>Finalist for the Number Crunchers competition for the St. George area in Year 5</li>
+        <li>Rugby Player during the winter season during Year 6</li>
+    </ul>
+        <h1>High School & Formative Years</h1>
+        <h2>High School Overview</h2>
+        <p>High School was an interesting experience as I had to learn about the real world, and at the end, decide on my future career path.    
+            The first years of high school were nothing special, with me keeping up with all my subjects. The fun part were the sports I took part in.
+            During Year 7-11 I was part of my schools Rowing team, where I acted as the coxswain, and ended up getting to attend the Head of the River in my final year,
+            which is just a large competition. In winter, I took part in Cross Country running between years 7-10 and then Rock Climbing for the last 2 years.
+            <br>
+            <br>
+            All of those experiences shaped who I am today</p>
+        <p></p>
+
+
     </body>
 </html>
