--- a/websystems/past.html
+++ b/websystems/past.html
@@ -25,8 +25,12 @@
             <br>
             <br>
             All of those experiences shaped who I am today</p>
-        <p></p>
-
-
+        <h2>Career Path</h2>
+        <p>To be honest, until the very end of high school, I did not know what I wanted to be. I obviously had childish notions of becoming an astronaut when I was young,
+            but in High School the first thing that interested me was History. I decided I was going to be a History Teacher. Obviously that didn't pan out coz here I am at 10pm
+            writing a paragraph in html and utilising css alongside it. But moving on, in Year 11 I decided that maybe Quantum Physics was my calling, and that notion stayed with 
+            me until the weeks leading up to my trials when one of my tutors convinced me to go into Software Engineering. That's what I finally landed on and have been finding it fun
+            ever since.
+        </p>
     </body>
 </html>
