--- a/websystems/comments.html
+++ b/websystems/comments.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+    <link rel="stylesheet" href="websystems.css">
+    </head>
+    <body>
+        <p>Placeholder 2</p>
+    </body>
 </html>
