--- a/websystems/future.html
+++ b/websystems/future.html
@@ -3,4 +3,7 @@
     <head>
         <link rel="stylesheet" href="websystems.css">
     </head>
+    <body>
+        <p>Placeholder</p>
+    </body>
 </html>
