--- a/websystems/future.html
+++ b/websystems/future.html
@@ -6,4 +6,6 @@
     <body>
         <p>Placeholder</p>
     </body>
+    <a href="past.html">Look at my Past!</a>
+    <a href="future.html">Back to the start!</a>
 </html>
