--- a/websystems/index.html
+++ b/websystems/index.html
@@ -59,5 +59,7 @@
             <br>
             It all started with the big bang
         </p>
+        <a href="past.html">Look at my Past!</a>
+        <a href="future.html">Peer into the future!</a>
     </body>
 </html>
