--- a/websystems/past.html
+++ b/websystems/past.html
@@ -32,5 +32,7 @@
             me until the weeks leading up to my trials when one of my tutors convinced me to go into Software Engineering. That's what I finally landed on and have been finding it fun
             ever since.
         </p>
+        <a href="index.html">Back to the start!</a>
+        <a href="future.html">Peer into the future!</a>
     </body>
 </html>
