updated css id + class

--- a/websystems/future.html
+++ b/websystems/future.html
@@ -3,9 +3,9 @@
     <head>
         <link rel="stylesheet" href="websystems.css">
     </head>
-    <body>
+    <body class="future">
         <p>Placeholder</p>
     </body>
     <a href="past.html">Look at my Past!</a>
-    <a href="future.html">Back to the start!</a>
+    <a href="index.html">Back to the start!</a>
 </html>
