--- a/websystems/index.html
+++ b/websystems/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <body class="index">
         <h1>
             This is a story about my life. Where should we start? AH, I know!
         </h1>
