--- a/websystems/past.html
+++ b/websystems/past.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="websystems.css">
     </head>
-    <body>
+    <body class="past">
         <h1>Primary School Life</h1>
         <h2>My Time in CSPS</h2>
         <p>From K-6 I attended Carlton South Primary School in, you guessed it, Carlton, Sydney. My Primary school life was nothing special,
