Future n Past updated

--- a/websystems/future.html
+++ b/websystems/future.html
@@ -4,8 +4,75 @@
         <link rel="stylesheet" href="websystems.css">
     </head>
     <body class="future">
-        <p>Placeholder</p>
-    </body>
+        <h1>My Future In Computing</h1>
+        <p> My future in computing is likely going to be a long one. I most definitely plan on finishing my degree and using that to define my line of work. Currently,
+            I'm considering what submajor suits me most as I'm not sure the exact field I want to go into. My 2 options right now seem to be Cybersecurity and Web Development 
+            (Less so the design aspect if that wasn't obvious looking at this). Here's what it looks like for me.
+            <table id="table-future">
+                <tr>
+                    <th></th>
+                    <th>Cybersecurity</th>
+                    <th>Web Design</th>
+                </tr>
+                <tr>
+                    <th>Pros</th>
+                    <td><ul>
+                        <li>
+                            Very Engaging and will keep me on my feet constantly
+                        </li>
+                        <li>
+                            Very Financially Competitive
+                        </li>
+                        <li>
+                            Interesting and employs a very logical workflow
+                        </li>
+                    </ul></td>
+                    <td><ul>
+                        <li>
+                            Much less mentally demanding
+                        </li>
+                        <li>
+                            Web Development rarely integrates new tools, so less 'homework' required
+                        </li>
+                        <li>
+                            Many resources on the internet to help with problems/personal development in this area
+                        </li>
+                    </ul></td>
+                </tr>
+                <tr>
+                    <th>Cons</th>
+                    <td><ul>
+                        <li>
+                            Very Competitive Role
+                        </li>
+                        <li>
+                            Longer Time required to hone my skills
+                        </li>
+                        <li>
+                            Mentally Tougher
+                        </li>
+                    </ul></td>
+                    <td><ul>
+                        <ti>
+                            Less Financially Competitive
+                        </ti>
+                        <ti>
+                            Could Become Boring
+                        </ti>
+                        <ti>
+                            Client Meetings are a lot more ambiguous
+                        </ti>
+                    </ul></td>
+                </tr>
+            </table>
+            <br>
+            <br>
+            <br>
+            Looking at the table, I feel like I lean more toward Cybersecurity as it seems to be more engaging and financially competitive. I also found that I ended up comparing
+            Web Development TO Cybersecurity instead of comparing them beside each other.
+        </p>
+    
     <a href="past.html">Look at my Past!</a>
     <a href="index.html">Back to the start!</a>
+    </body>
 </html>
