--- a/websystems/past.html
+++ b/websystems/past.html
@@ -4,33 +4,23 @@
         <link rel="stylesheet" href="websystems.css">
     </head>
     <body class="past">
-        <h1>Primary School Life</h1>
-        <h2>My Time in CSPS</h2>
-        <p>From K-6 I attended Carlton South Primary School in, you guessed it, Carlton, Sydney. My Primary school life was nothing special,
-            with me completing my time there with no issues. I enjoyed myself back then by playing cricket during the summer season and rugby 
-            during the winter season. I also partook in the debating club which ended up winning undefeated that year under our command.</p>
-            <br>
-        <h2>Notable Achievements</h2>
-       <ul>
-        <li>Undefeated in the Year 6 Debating Season</li>
-        <li>Finalist for the Number Crunchers competition for the St. George area in Year 5</li>
-        <li>Rugby Player during the winter season during Year 6</li>
-    </ul>
-        <h1>High School & Formative Years</h1>
+        <h1>High School Life</h1>
         <h2>High School Overview</h2>
-        <p>High School was an interesting experience as I had to learn about the real world, and at the end, decide on my future career path.    
-            The first years of high school were nothing special, with me keeping up with all my subjects. The fun part were the sports I took part in.
-            During Year 7-11 I was part of my schools Rowing team, where I acted as the coxswain, and ended up getting to attend the Head of the River in my final year,
-            which is just a large competition. In winter, I took part in Cross Country running between years 7-10 and then Rock Climbing for the last 2 years.
-            <br>
-            <br>
-            All of those experiences shaped who I am today</p>
+        <p> In terms of computing, I had pretty much no experience by the end of high school. The most I had done in terms of development was working with a basic Python course,
+            which I ended up giving up on when I couldn't figure out while loops. My chosen Career Path was a bit sudden as I'll now describe below.
+        </p>
         <h2>Career Path</h2>
-        <p>To be honest, until the very end of high school, I did not know what I wanted to be. I obviously had childish notions of becoming an astronaut when I was young,
+        <p> To be honest, until the very end of high school, I did not know what I wanted to be. I obviously had childish notions of becoming an astronaut when I was young,
             but in High School the first thing that interested me was History. I decided I was going to be a History Teacher. Obviously that didn't pan out coz here I am at 10pm
-            writing a paragraph in html and utilising css alongside it. But moving on, in Year 11 I decided that maybe Quantum Physics was my calling, and that notion stayed with 
-            me until the weeks leading up to my trials when one of my tutors convinced me to go into Software Engineering. That's what I finally landed on and have been finding it fun
-            ever since.
+            writing a paragraph using html and css instead of using Word. But moving on, in Year 11 I decided that maybe Quantum Physics was my calling, and that notion stayed with 
+            me until the weeks leading up to my trials when one of my tutors convinced me to go into Software Engineering. That's what I finally landed on and have been finding it 
+            fulfilling ever since.
+        </p>
+        <h1>University Life</h1>
+        <h2>University Overview</h2>
+        <p> Coming into University with no prior knowledge of coding or computing practices was quite hard. For the first semester, I learnt Java, which was my gateway into the
+            other languages I know now such as C++, JavaScript and TypeScript. Now I find that computing and coding is much easier and am not too fussed about not having any 
+            experience upon entry.
         </p>
         <a href="index.html">Back to the start!</a>
         <a href="future.html">Peer into the future!</a>
