--- a/websystems/future.html
+++ b/websystems/future.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="websystems.css">
     </head>
     <body class="future">
-        <h1>My Future In Computing</h1>
-        <p> My future in computing is likely going to be a long one. I most definitely plan on finishing my degree and using that to define my line of work. Currently,
+        <h1 class="future">My Future In Computing</h1>
+        <p class="future"> My future in computing is likely going to be a long one. I most definitely plan on finishing my degree and using that to define my line of work. Currently,
             I'm considering what submajor suits me most as I'm not sure the exact field I want to go into. My 2 options right now seem to be Cybersecurity and Web Development 
             (Less so the design aspect if that wasn't obvious looking at this). Here's what it looks like for me.
             <table id="table-future">
@@ -53,23 +53,24 @@
                         </li>
                     </ul></td>
                     <td><ul>
-                        <ti>
+                        <li>
                             Less Financially Competitive
-                        </ti>
-                        <ti>
+                        </li>
+                        <li>
                             Could Become Boring
-                        </ti>
-                        <ti>
+                        </li>
+                        <li>
                             Client Meetings are a lot more ambiguous
-                        </ti>
+                        </li>
                     </ul></td>
                 </tr>
             </table>
             <br>
             <br>
             <br>
-            Looking at the table, I feel like I lean more toward Cybersecurity as it seems to be more engaging and financially competitive. I also found that I ended up comparing
+            <p class="future">Looking at the table, I feel like I lean more toward Cybersecurity as it seems to be more engaging and financially competitive. I also found that I ended up comparing
             Web Development TO Cybersecurity instead of comparing them beside each other.
+            </p>
         </p>
     
     <a href="past.html">Look at my Past!</a>
