--- a/websystems/index.html
+++ b/websystems/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <head> 
+        <link rel="stylesheet" href="websystems.css">
+    </head>
     <body class="index">
         <h1>
-            Welcome to my website, I'm Kieren K. Sit down, have a cup of tea and make yourself at home. This is my computing story.
+            Welcome to my website.
         </h1>
+        <p>I'm Kieren K. Sit down, have a cup of tea and make yourself at home. This is my computing story.</p>
         <img src="tea.jpg" alt="Cup with tea">
+        <br>
         <a href="past.html">Look at my Past!</a>
         <a href="future.html">Peer into the future!</a>
     </body>
