Added Div and Span

--- a/websystems/index.html
+++ b/websystems/index.html
@@ -7,7 +7,7 @@
         <h1>
             Welcome to my website.
         </h1>
-        <p>I'm Kieren K. Sit down, have a cup of tea and make yourself at home. This is my computing story.</p>
+        <p>I'm Kieren K. Sit down, <span style=color:brown>have a cup of tea</span> and make yourself at home. This is my computing story.</p>
         <img src="tea.jpg" alt="Cup with tea">
         <br>
         <a href="past.html">Look at my Past!</a>
