--- a/websystems/past.html
+++ b/websystems/past.html
@@ -9,6 +9,7 @@
         <p> In terms of computing, I had pretty much no experience by the end of high school. The most I had done in terms of development was working with a basic Python course,
             which I ended up giving up on when I couldn't figure out while loops. My chosen Career Path was a bit sudden as I'll now describe below.
         </p>
+        <div>
         <h2>Career Path</h2>
         <p> To be honest, until the very end of high school, I did not know what I wanted to be. I obviously had childish notions of becoming an astronaut when I was young,
             but in High School the first thing that interested me was History. I decided I was going to be a History Teacher. Obviously that didn't pan out coz here I am at 10pm
@@ -16,6 +17,7 @@
             me until the weeks leading up to my trials when one of my tutors convinced me to go into Software Engineering. That's what I finally landed on and have been finding it 
             fulfilling ever since.
         </p>
+    </div>
         <h1>University Life</h1>
         <h2>University Overview</h2>
         <p> Coming into University with no prior knowledge of coding or computing practices was quite hard. For the first semester, I learnt Java, which was my gateway into the
